# Programacion2_UCC

POO/1/: CMakeLists.txt  datos.h  main.cpp  precio.cpp
POO/POO/proyectoalumnos/: CMakeLists.txt  alumnos.cpp  alumnos.h  datos.cpp  datos.h  docente.cpp  docente.h  main.cpp  (+2 more)
POO/POO/proyectoescuela/: CMakeLists.txt  alumnos.cpp  alumnos.h  datos.cpp  datos.h  docente.cpp  main.cpp  materia.cpp  materia.h  todoslosdocentes.cpp  todoslosdocentes.h
POO/ej2/: CMakeLists.txt  alumno.cpp  datos.h  main.cpp
POO/ej3/: CMakeLists.txt  cuenta.cpp  datos.h  main.cpp
POO/fecha/: CMakeLists.txt  fecha.cpp  fecha.h  main.cpp
POO/reloj/: CMakeLists.txt  main.cpp  reloj.cpp  reloj.h
POO/triangulo/: CMakeLists.txt  main.cpp  triangulo.cpp  triangulo.h
punteros/: CMakeLists.txt  main.cpp
punteros/ej2/: CMakeLists.txt
punteros/ej3/: main.cpp
punteros/ej3guia/: CMakeLists.txt  main.cpp
punteros/ej5guia/: CMakeLists.txt  main.cpp
punteros/ej6guia/: CMakeLists.txt  main.cpp
repaso primer parcial/ejercicio 1/: CMakeLists.txt  actores.cpp  actores.h  datos.cpp  datos.h  main.cpp  pelicula.cpp  pelicula.h
unidad 1/bn/: CMakeLists.txt  main.cpp
unidad 1/ej2/: main.cpp
unidad 1/ej3/: CMakeLists.txt  main.cpp
unidad 1/ej4/: CMakeLists.txt  main.cpp
unidad 1/ej5/: CMakeLists.txt  main.cpp
unidad 1/ej6/: CMakeLists.txt  main.cpp
unidad 1/ej7/: CMakeLists.txt  main.cpp
unidad 1/ej8/: CMakeLists.txt  main.cpp
unidad 1/ej9/: CMakeLists.txt  main.cpp
unidad 1/practica1/: CMakeLists.txt  ej1.cpp  main.cpp
unidad 1/tp1/: CMakeLists.txt  ej1  main.cpp
(+16 files in other folders)
